--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
-    "cra-template": "1.0.3",
-    "dotenv": "^8.2.0",
-    "emotion": "^10.0.27",
+    "highlight.js": "^10.1.2",
     "history": "^5.0.0",
-    "is-hotkey": "^0.1.6",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -18,7 +17,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
