--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "highlight.js": "^10.1.2",
-    "history": "^5.0.0",
+    "history": "4.6.3",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
